fixed overflow createCollectionForm, added scroll

--- a/src/pages/styles/DetailsCollection.css
+++ b/src/pages/styles/DetailsCollection.css
@@ -5,6 +5,8 @@
     top: 10%;
     left: 0;
     color: rgb(50, 196, 245);
+    padding: 4px 8px;
+
   }
 }
 .details-additionally-title{
